@@ -3,6 +3,8 @@
    VanDevender <stevev@darkwing.uoregon.edu>
  - (djm) Make sure pam_retval is initialised on call to pam_end. Patch
    from Solar Designer <solar@openwall.com>
+ - (djm) Don't loop forever when changing password via PAM. Patch
+   from Solar Designer <solar@openwall.com>
 
 20010320
  - (bal) glob.c update to added GLOB_LIMITS (OpenBSD CVS).
@@ -4651,4 +4653,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.995 2001/03/21 01:16:24 djm Exp $
+$Id: ChangeLog,v 1.996 2001/03/21 02:01:35 djm Exp $
